--- a/pacific/pacific.css
+++ b/pacific/pacific.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #FFFFFF;
+    background: linear-gradient(to bottom, #FFFFFF, #90C7E3);
+    background-repeat: no-repeat;
     color: #666666;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,31 +11,41 @@ header {
     background-image: url(images/sunset.jpg);
     background-position: right;
     background-repeat: no-repeat;
-    line-height: 400%;
-    text-indent: 1em;
+    height: 60px;
+    text-align: center;
+    padding-top: 15px;
 }
 
 nav {
-    background-color: #90C7E3;
-    font-style: oblique;
+    background-color: #FFFFFF;
+    font-weight: bold;
+    text-align: center;
+    padding: 10px;
 }
 
 nav a {
     text-decoration: none;
 }
 
+main {
+    padding: 1px 20px 20px;
+    display: block;
+}
+
 h1 {
+    margin-top: 0;
     margin-bottom: 0;
-    font-family: Georgia, Times New Roman, serif;
+    font-family: Georgia, "Times New Roman", serif;
 }
 
 h2 {
     color: #3399CC;
-    font-family: Georgia, Times New Roman, serif;
+    font-family: Georgia, "Times New Roman", serif;
+    text-shadow: 1px 1px #CCCCCC;
 }
 
 h3 {
-    font-family: Georgia, Times New Roman, serif;
+    font-family: Georgia, "Times New Roman", serif;
 }
 
 ul {
@@ -46,15 +57,44 @@ dt {
 }
 
 footer {
+    padding: 20px;
     font-size: 75%;
     font-style: italic;
-    font-family: Georgia, Times New Roman, serif;
+    font-family: Georgia, "Times New Roman", serif;
     text-align: center;
 }
 
 .resort {
     color: #5C7FA3;
-    font-style: oblique;
+    font-weight: bold;
+}
+
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: 3px 3px #333333;
+    background-color: #FFFFFF;
+}
+
+#homehero {
+    background-image: url(images/coasthero.jpg);
+    height: 300px;
+    background-size: 100%, 100%;
+}
+
+#yurthero {
+    background-image: url(images/yurthero.jpg);
+    height: 300px;
+    background-size: 100%, 100%;
+}
+
+#trailhero {
+    background-image: url(images/trailhero.jpg);
+    height: 300px;
+    background-size: 100%, 100%;
 }
 
 #contact {
