--- a/pacific/pacific.css
+++ b/pacific/pacific.css
@@ -1,5 +1,6 @@
 body {
-    background: linear-gradient(to bottom, #FFFFFF, #90C7E3);
+    background-color: #4F6D93;
+    background: linear-gradient(to bottom, #FFFFFF, #4F6D93);
     background-repeat: no-repeat;
     color: #666666;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,10 +18,29 @@ header {
 }
 
 nav {
-    background-color: #FFFFFF;
     font-weight: bold;
-    text-align: center;
-    padding: 10px;
+    padding: 20px;
+    float: left;
+    width: 160px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+    font-size: 1.2em;
+}
+
+nav a:link {
+    color: #000033;
+}
+
+nav a:visited {
+    color: #344873;
+}
+
+nav a:hover {
+    color: #FFFFFF;
 }
 
 nav a {
@@ -28,7 +48,10 @@ nav a {
 }
 
 main {
+    background-color: #FFFFFF;
+    margin-left: 190px;
     padding: 1px 20px 20px;
+    padding-left: 30px;
     display: block;
 }
 
@@ -48,7 +71,7 @@ h3 {
     font-family: Georgia, "Times New Roman", serif;
 }
 
-ul {
+main ul {
     list-style-type: "bullet";
 }
 
@@ -62,6 +85,8 @@ footer {
     font-style: italic;
     font-family: Georgia, "Times New Roman", serif;
     text-align: center;
+    margin-left: 190px;
+    background-color: #FFFFFF;
 }
 
 .resort {
@@ -76,25 +101,28 @@ footer {
     min-width: 960px;
     max-width: 2048px;
     box-shadow: 3px 3px #333333;
-    background-color: #FFFFFF;
+    background-color: #90C7E3;
 }
 
 #homehero {
     background-image: url(images/coasthero.jpg);
     height: 300px;
     background-size: 100%, 100%;
+    margin-left: 190px;
 }
 
 #yurthero {
     background-image: url(images/yurthero.jpg);
     height: 300px;
     background-size: 100%, 100%;
+    margin-left: 190px;
 }
 
 #trailhero {
     background-image: url(images/trailhero.jpg);
     height: 300px;
     background-size: 100%, 100%;
+    margin-left: 190px;
 }
 
 #contact {
